# ethoscope

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  current_code.md  docker-compose.yml  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 15715f86a411_initial_schema.py  63d4ee1bb89b_add_mev_and_l2_metrics_tables.py  c38b35702c0a_create_l2_metrics_tables.py  dd510cdb998a_add_ml_alerts_table.py  de7fdaa0c9aa_create_l2_metrics_tables_properly.py  f9a8d741038f_add_mev_gas_price_gwei_to_mevmetric.py
backend/: README.md  __init__.py  test_api.py
backend/api/: README.md  __init__.py  dependencies.py  main.py  monitoring.py  schemas.py  websocket.py
backend/api/middleware/: README.md  auth.py  cache.py  monitoring.py  rate_limit.py
backend/api/routers/: README.md  admin.py  health.py  l2_comparison.py  metrics.py  mev.py  ml.py
backend/app/api/v1/endpoints/: l2_metrics.py  mev_metrics.py  network_metrics.py
backend/etl/: README.md  __init__.py  config.py  pipeline.py  validators.py
backend/etl/collectors/: README.md  alchemy_collector.py  base.py  flashbots_collector.py  l2_collector.py
backend/etl/loaders/: __init__.py  database_loader.py
backend/etl/processors/: README.md  __init__.py  health_score_calculator.py  metric_processor.py
backend/ml/: README.md  __init__.py  models.py  predictors.py  training.py
backend/models/: README.md  __init__.py  database.py  l2_metrics.py  metrics.py  mev_metrics.py  ml_alerts.py
backend/utils/: README.md  circuit_breaker.py
docker/: backend.Dockerfile  dev.Dockerfile
frontend/: .env.local  Dockerfile  Dockerfile.dev  next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/insights/: page.tsx
frontend/app/test/: page.tsx
frontend/components/: EnhancedDashboard.tsx  Navigation.tsx  NetworkInsightsDashboard.tsx  SimpleDashboard.tsx
frontend/components/Charts/: GaugeChart.tsx
frontend/components/Dashboard/: Dashboard.tsx  GasPriceChart.tsx  HealthScore.tsx  NetworkStats.tsx  PredictionPanel.tsx
frontend/components/Layout/: Header.tsx
frontend/hooks/: useMetrics.ts  useWebSocket.ts
frontend/store/: metricsStore.ts
models/congestion_predictor/: congestion_predictor_latest.pkl  congestion_predictor_v20250731_232544.pkl  metadata.pkl
models/gas_price_predictor/: gas_price_predictor_latest.pkl  gas_price_predictor_v20250731_232540.pkl  metadata.pkl
scripts/: check_data.py  clean_code.py  init_timescale.sql  phase2_db_optimization.sql  run_api.py  run_etl.py  setup_phase2_timescale.sql  setup_timescale.sql  test_collectors.py  test_integration.py  timescale_compression.sql  train_ml_models.sh
tests/backend/: test_collectors.py
tests/test_ml/: test_predictors.py
