[tool.poetry]
name = "ethoscope"
version = "0.1.0"
description = "Ethereum Network Health Monitor"
authors = ["Glenn Harless"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
web3 = "^7.12.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.41"
alembic = "^1.16.2"
pandas = "^2.3.1"
numpy = "^2.3.1"
redis = "^6.2.0"
python-dotenv = "^1.1.1"
httpx = "^0.28.1"
requests = "^2.32.4"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
cachetools = "^5.3.2"
prometheus-client = "^0.20.0"
backoff = "^2.2.1"
scipy = "^1.11.4"
pyjwt = "^2.8.0"

# ML dependencies (minimal set)
scikit-learn = "^1.3.2"
prophet = "^1.1.5"
joblib = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.2.1"
ruff = "^0.1.11"
mypy = "^1.16.1"
ipython = "^9.4.0"
pre-commit = "^4.2.0"

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
jupyter = "^1.1.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
